--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,74 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Robots must prioritize human safety.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm sorry, but I don't have access to the specific response I provided previously. However, here are concise summaries for the laws of thermodynamics again:\n",
-      "\n",
-      "1st Law: Energy is conserved.\n",
-      "2nd Law: Entropy of the universe increases.\n",
-      "3rd Law: Zero entropy at absolute zero.\n",
-      "\n",
-      "If you would like another explanation or have specific questions about the differences, please let me know!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n",
-      "Variable `Symbols.VAR_PREFIX: history` not found in the KernelArguments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last time I said: \"Every point mass attracts every other with a force proportional to the product of their masses and inversely proportional to the square of the distance between them.\"\n",
-      "\n",
-      "The difference between what I said last time and this time is that in my previous response, the phrase \"acting along the line intersecting both points\" was omitted for brevity.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
+    "import finnhub\n",
+    "import datetime\n",
     "from semantic_kernel import Kernel\n",
-    "from semantic_kernel.connectors.ai.open_ai import (\n",
-    "    OpenAIChatCompletion,\n",
-    "    AzureChatCompletion,\n",
-    ")\n",
+    "from semantic_kernel.connectors.ai.open_ai import OpenAIChatCompletion\n",
+    "from semantic_kernel.core_plugins.time_plugin import TimePlugin\n",
+    "from semantic_kernel.core_plugins.math_plugin import MathPlugin\n",
+    "from semantic_kernel.core_plugins.text_plugin import TextPlugin\n",
     "from semantic_kernel.prompt_template import PromptTemplateConfig\n",
     "\n",
+    "\n",
+    "class FinnhubPlugin:\n",
+    "    def __init__(self, api_key):\n",
+    "        self.client = finnhub.Client(api_key=api_key)\n",
+    "\n",
+    "    def fetch_latest_investment_news(self, category=\"top news\", min_id=0):\n",
+    "        try:\n",
+    "            news = self.client.general_news(category, min_id=min_id)\n",
+    "            formatted_news = []\n",
+    "            for item in news:\n",
+    "                formatted_news.append(\n",
+    "                    {\n",
+    "                        \"headline\": item[\"headline\"],\n",
+    "                        \"source\": item[\"source\"],\n",
+    "                        \"date\": datetime.datetime.fromtimestamp(\n",
+    "                            item[\"datetime\"]\n",
+    "                        ).strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+    "                        \"summary\": item[\"summary\"],\n",
+    "                        \"url\": item[\"url\"],\n",
+    "                        \"image\": item[\"image\"],\n",
+    "                    }\n",
+    "                )\n",
+    "            return formatted_news\n",
+    "        except Exception as e:\n",
+    "            return {\"error\": str(e)}\n",
+    "\n",
+    "\n",
+    "# API Keys from environment variables\n",
     "OPENAI_API_KEY = os.environ[\"OPENAI_API_KEY\"]\n",
+    "FINNHUB_API_KEY = os.environ[\"FINNHUB_API_KEY\"]\n",
+    "\n",
+    "# Initialize Finnhub plugin\n",
+    "finnhub_plugin = FinnhubPlugin(FINNHUB_API_KEY)\n",
+    "\n",
+    "# Initialize the Semantic Kernel\n",
     "kernel = Kernel()\n",
     "\n",
-    "# Prepare OpenAI service using credentials stored in the `.env` file\n",
+    "# Add OpenAI services\n",
     "gpt4o_service_id = \"chat-gpt-4o\"\n",
     "kernel.add_service(\n",
     "    OpenAIChatCompletion(\n",
@@ -84,93 +68,127 @@
     "    )\n",
     ")\n",
     "\n",
+    "# Add core plugins\n",
+    "kernel.add_plugin(TimePlugin(), \"time\")\n",
+    "kernel.add_plugin(MathPlugin(), \"math\")\n",
+    "kernel.add_plugin(TextPlugin(), \"text\")\n",
+    "\n",
+    "# Add Finnhub plugin to kernel\n",
+    "kernel.add_plugin(finnhub_plugin, \"finnhub\")\n",
+    "\n",
     "# Define the request settings\n",
     "req_settings = kernel.get_prompt_execution_settings_from_service_id(gpt35_service_id)\n",
     "req_settings.max_tokens = 2000\n",
     "req_settings.temperature = 0.7\n",
     "req_settings.top_p = 0.8\n",
     "\n",
+    "# Define the prompt template for summarizing investment news\n",
+    "investment_news_prompt_template = \"\"\"\n",
+    "Summarize 5 top news bullet points. News: {{$news}}\n",
+    "\"\"\"\n",
     "\n",
-    "prompt = \"\"\"\n",
-    "1) A robot may not injure a human being or, through inaction,\n",
-    "allow a human being to come to harm.\n",
-    "\n",
-    "2) A robot must obey orders given it by human beings except where\n",
-    "such orders would conflict with the First Law.\n",
-    "\n",
-    "3) A robot must protect its own existence as long as such protection\n",
-    "does not conflict with the First or Second Law.\n",
-    "\n",
-    "Give me the TLDR in exactly 5 words.\"\"\"\n",
-    "\n",
-    "prompt_template_config = PromptTemplateConfig(\n",
-    "    template=prompt,\n",
-    "    name=\"tldr\",\n",
+    "# Create the prompt template configuration\n",
+    "investment_news_prompt_template_config = PromptTemplateConfig(\n",
+    "    template=investment_news_prompt_template,\n",
+    "    name=\"investment_news_summary\",\n",
     "    template_format=\"semantic-kernel\",\n",
     "    execution_settings=req_settings,\n",
     ")\n",
     "\n",
-    "function = kernel.add_function(\n",
-    "    function_name=\"tldr_function\",\n",
-    "    plugin_name=\"tldr_plugin\",\n",
-    "    prompt_template_config=prompt_template_config,\n",
+    "# Create the function using the prompt template configuration\n",
+    "investment_news_summary_function = kernel.add_function(\n",
+    "    function_name=\"investment_news_summary_function\",\n",
+    "    plugin_name=\"investment_news_plugin\",\n",
+    "    prompt_template_config=investment_news_prompt_template_config,\n",
     ")\n",
     "\n",
-    "# Create a reusable function summarize function\n",
+    "news_summary = await kernel.invoke(\n",
+    "    investment_news_summary_function, news=finnhub_plugin.fetch_latest_investment_news()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionResult(function=KernelFunctionMetadata(name='investment_news_summary_function', plugin_name='investment_news_plugin', description=None, parameters=[KernelParameterMetadata(name='news', description='', default_value='', type_='', is_required=True, type_object=None, schema_data={'type': 'object'})], is_prompt=True, is_asynchronous=True, return_parameter=KernelParameterMetadata(name='return', description='The completion result', default_value=None, type_='FunctionResult', is_required=True, type_object=None, schema_data=None), additional_properties=None), value=[ChatMessageContent(inner_content=ChatCompletion(id='chatcmpl-9UlDxFjHo0dzUeSpuAKJ1GElba19U', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"1. Former President Donald Trump has been found dead in his apartment.\\n2. The cause of Trump's death has not been disclosed.\\n3. Trump's death has shocked and saddened many across the country.\\n4. Tributes and condolences are pouring in from political figures and supporters.\\n5. Investigations are ongoing to determine the circumstances surrounding Trump's death.\", role='assistant', function_call=None, tool_calls=None))], created=1717118397, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=CompletionUsage(completion_tokens=70, prompt_tokens=29, total_tokens=99)), ai_model_id='gpt-3.5-turbo', metadata={'logprobs': None, 'id': 'chatcmpl-9UlDxFjHo0dzUeSpuAKJ1GElba19U', 'created': 1717118397, 'system_fingerprint': None, 'usage': CompletionUsage(completion_tokens=70, prompt_tokens=29, total_tokens=99)}, role=<AuthorRole.ASSISTANT: 'assistant'>, name=None, items=[TextContent(inner_content=None, ai_model_id=None, metadata={}, text=\"1. Former President Donald Trump has been found dead in his apartment.\\n2. The cause of Trump's death has not been disclosed.\\n3. Trump's death has shocked and saddened many across the country.\\n4. Tributes and condolences are pouring in from political figures and supporters.\\n5. Investigations are ongoing to determine the circumstances surrounding Trump's death.\", encoding=None)], encoding=None, finish_reason=<FinishReason.STOP: 'stop'>)], metadata={'arguments': {'news': 'Donald Trump foudn dead in his apartment.'}, 'metadata': [{'logprobs': None, 'id': 'chatcmpl-9UlDxFjHo0dzUeSpuAKJ1GElba19U', 'created': 1717118397, 'system_fingerprint': None, 'usage': CompletionUsage(completion_tokens=70, prompt_tokens=29, total_tokens=99)}], 'messages': ChatHistory(messages=[ChatMessageContent(inner_content=None, ai_model_id=None, metadata={}, role=<AuthorRole.USER: 'user'>, name=None, items=[TextContent(inner_content=None, ai_model_id=None, metadata={}, text='Summarize 5 top news bullet points. News: Donald Trump foudn dead in his apartment.', encoding=None)], encoding=None, finish_reason=None)])})"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the prompt template for summarizing\n",
+    "summarize_prompt_template = \"\"\"\n",
+    "{{$input}}\n",
+    "\n",
+    "One line TLDR with the fewest words. Last time you said: {{$history}}. Explain also what day it is Context: {{time.today}}.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Create the prompt template configuration\n",
+    "summarize_prompt_template_config = PromptTemplateConfig(\n",
+    "    template=summarize_prompt_template,\n",
+    "    name=\"summarize\",\n",
+    "    template_format=\"semantic-kernel\",\n",
+    "    execution_settings=req_settings,\n",
+    ")\n",
+    "\n",
+    "# Create the summarize function using the prompt template configuration\n",
     "summarize = kernel.add_function(\n",
-    "    function_name=\"tldr_function\",\n",
-    "    plugin_name=\"tldr_plugin\",\n",
-    "    prompt=\"{{$input}}\\n\\nOne line TLDR with the fewest words. Last time you said: {{$history}}. Explain what you said lasst time verabtim the difference between what you said before and this time.\",\n",
-    "    prompt_template_config=prompt_template_config,\n",
+    "    function_name=\"summarize_function\",\n",
+    "    plugin_name=\"summarize_plugin\",\n",
+    "    prompt_template_config=summarize_prompt_template_config,\n",
     ")\n",
     "\n",
     "\n",
     "# Run your prompt\n",
     "# Note: functions are run asynchronously\n",
     "async def main():\n",
-    "    result = await kernel.invoke(function)\n",
-    "    print(result)  # => Robots must not harm humans.\n",
     "    # Summarize the laws of thermodynamics\n",
-    "    print(\n",
-    "        await kernel.invoke(\n",
-    "            summarize,\n",
-    "            input=\"\"\"\n",
+    "    thermodynamics_result = await kernel.invoke(\n",
+    "        summarize,\n",
+    "        input=\"\"\"\n",
     "    1st Law of Thermodynamics - Energy cannot be created or destroyed.\n",
     "    2nd Law of Thermodynamics - For a spontaneous process, the entropy of the universe increases.\n",
     "    3rd Law of Thermodynamics - A perfect crystal at zero Kelvin has zero entropy.\"\"\",\n",
-    "        )\n",
+    "        history=\"\",\n",
     "    )\n",
-    "\n",
-    "    # Summarize the laws of motion\n",
-    "    res = await kernel.invoke(\n",
-    "        summarize,\n",
-    "        input=\"\"\"\n",
-    "    1. An object at rest remains at rest, and an object in motion remains in motion at constant speed and in a straight line unless acted on by an unbalanced force.\n",
-    "    2. The acceleration of an object depends on the mass of the object and the amount of force applied.\n",
-    "    3. Whenever one object exerts a force on another object, the second object exerts an equal and opposite on the first.\"\"\",\n",
-    "    )\n",
-    "\n",
-    "    # Summarize the laws of motion with history\n",
-    "    res = (\n",
-    "        await kernel.invoke(\n",
-    "            summarize,\n",
-    "            input=\"\"\"\n",
-    "    1. An object at rest remains at rest, and an object in motion remains in motion at constant speed and in a straight line unless acted on by an unbalanced force.\n",
-    "    2. The acceleration of an object depends on the mass of the object and the amount of force applied.\n",
-    "    3. Whenever one object exerts a force on another object, the second object exerts an equal and opposite on the first.\"\"\",\n",
-    "        ),\n",
-    "    )\n",
-    "    history = res\n",
-    "\n",
-    "    # Summarize the law of universal gravitation\n",
-    "    print(\n",
-    "        await kernel.invoke(\n",
-    "            summarize,\n",
-    "            input=\"\"\"\n",
-    "    Every point mass attracts every single other point mass by a force acting along the line intersecting both points.\n",
-    "    The force is proportional to the product of the two masses and inversely proportional to the square of the distance between them.\"\"\",\n",
-    "        )\n",
-    "    )"
+    "    print(thermodynamics_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st Law: Energy is conserved.\n",
+      "2nd Law: Entropy increases in spontaneous processes.\n",
+      "3rd Law: Zero entropy at absolute zero.\n",
+      "Today is Thursday, 30 May, 2024.\n"
+     ]
+    }
+   ],
+   "source": [
+    "await main()"
    ]
   },
   {
@@ -178,32 +196,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import finnhub\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import requests\n",
-    "import openai\n",
-    "import semantic_kernel as sk\n",
-    "from semantic_kernel.connectors.ai.open_ai import OpenAIChatCompletion\n",
-    "from alpaca.data import StockHistoricalDataClient\n",
-    "from alpaca.trading.client import TradingClient\n",
-    "from alpaca.trading.requests import MarketOrderRequest\n",
-    "from alpaca.trading.enums import OrderSide, TimeInForce\n",
-    "import jupyter_black\n",
-    "\n",
-    "jupyter_black.load()\n",
-    "\n",
-    "\n",
-    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY']\n",
-    "FINNHUB_API_KEY = os.environ['FINNHUB_API_KEY']\n",
-    "ALPACA_API_KEY = os.environ['ALPACA_KEY']\n",
-    "ALPACA_SECRET_KEY = os.environ['ALPACA_SECRET']\n",
-    "ALPACA_PAPER_API_KEY = os.environ['ALPACA_PAPER_API_KEY']\n",
-    "ALPACA_PAPER_SECRET_KEY = os.environ['ALPACA_PAPER_API_SECRET']\n",
-    "BASE_URL = 'https://paper-api.alpaca.markets'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
