--- a/debug.ipynb
+++ b/debug.ipynb
@@ -208,31 +208,51 @@
     "gpt4_kernel = sk.Kernel()\n",
     "gpt4_kernel.add_service(\n",
     "    OpenAIChatCompletion(\n",
-    "        service_id=\"gpt4o\",\n",
-    "        ai_model_id=\"gpt-4o\",\n",
-    "        api_key=OPENAI_API_KEY\n",
+    "        service_id=\"gpt4o\", ai_model_id=\"gpt-4o\", api_key=OPENAI_API_KEY\n",
     "    ),\n",
     ")\n",
     "gpt3_kernel = sk.Kernel()\n",
     "gpt3_kernel.add_service(\n",
     "    OpenAIChatCompletion(\n",
-    "        service_id=\"gpt3.5-turbo\",\n",
-    "        ai_model_id=\"gpt-3.5-turbo\",\n",
-    "        api_key=OPENAI_API_KEY\n",
+    "        service_id=\"gpt3.5-turbo\", ai_model_id=\"gpt-3.5-turbo\", api_key=OPENAI_API_KEY\n",
     "    ),\n",
     ")\n",
     "\n",
     "# examples of adding functions to the kernels\n",
-    "gpt4_kernel.add_function(function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\", prompt=\"What is the stock price of {symbol}?\")\n",
-    "gpt4_kernel.add_function(function_name=\"get_company_profile\", plugin_name=\"stock_info_plugin\", prompt=\"Tell me about the company {symbol}.\")\n",
-    "gpt4_kernel.add_function(function_name=\"get_historical_data\", plugin_name=\"stock_info_plugin\", prompt=\"Give me the historical data for {symbol}.\")\n",
-    "gpt3_kernel.add_function(function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\", prompt=\"What is the stock price of {symbol}?\")\n",
-    "gpt3_kernel.add_function(function_name=\"get_company_profile\", plugin_name=\"stock_info_plugin\", prompt=\"Tell me about the company {symbol}.\")\n",
-    "gpt3_kernel.add_function(function_name=\"get_historical_data\", plugin_name=\"stock_info_plugin\", prompt=\"Give me the historical data for {symbol}.\")\n",
+    "gpt4_kernel.add_function(\n",
+    "    function_name=\"get_stock_price\",\n",
+    "    plugin_name=\"stock_info_plugin\",\n",
+    "    prompt=\"What is the stock price of {symbol}?\",\n",
+    ")\n",
+    "gpt4_kernel.add_function(\n",
+    "    function_name=\"get_company_profile\",\n",
+    "    plugin_name=\"stock_info_plugin\",\n",
+    "    prompt=\"Tell me about the company {symbol}.\",\n",
+    ")\n",
+    "gpt4_kernel.add_function(\n",
+    "    function_name=\"get_historical_data\",\n",
+    "    plugin_name=\"stock_info_plugin\",\n",
+    "    prompt=\"Give me the historical data for {symbol}.\",\n",
+    ")\n",
+    "gpt3_kernel.add_function(\n",
+    "    function_name=\"get_stock_price\",\n",
+    "    plugin_name=\"stock_info_plugin\",\n",
+    "    prompt=\"What is the stock price of {symbol}?\",\n",
+    ")\n",
+    "gpt3_kernel.add_function(\n",
+    "    function_name=\"get_company_profile\",\n",
+    "    plugin_name=\"stock_info_plugin\",\n",
+    "    prompt=\"Tell me about the company {symbol}.\",\n",
+    ")\n",
+    "gpt3_kernel.add_function(\n",
+    "    function_name=\"get_historical_data\",\n",
+    "    plugin_name=\"stock_info_plugin\",\n",
+    "    prompt=\"Give me the historical data for {symbol}.\",\n",
+    ")\n",
     "\n",
     "\n",
     "# for using Phi-3 locally\n",
-    "qa_pipeline = pipeline('text-generation', model='microsoft/Phi-3-mini-128k-instruct')"
+    "qa_pipeline = pipeline(\"text-generation\", model=\"microsoft/Phi-3-mini-128k-instruct\")"
    ]
   },
   {
@@ -241,17 +261,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_function = gpt3_kernel.get_function(function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\")\n",
+    "test_function = gpt3_kernel.get_function(\n",
+    "    function_name=\"get_stock_price\", plugin_name=\"stock_info_plugin\"\n",
+    ")\n",
     "request_settings = {\n",
     "    \"prompt\": \"What is the stock price of AAPL?\",\n",
     "    \"max_tokens\": 150,  # Adjust as needed\n",
     "    \"temperature\": 0.7,\n",
-    "    \"top_p\": 0.9\n",
+    "    \"top_p\": 0.9,\n",
     "}\n",
     "\n",
     "# Invoke the function\n",
     "result = await gpt3_kernel.invoke(test_function, **request_settings)\n",
-    "print(result.get_inner_content().to_dict()['choices'][0]['message']['content'])"
+    "print(result.get_inner_content().to_dict()[\"choices\"][0][\"message\"][\"content\"])"
    ]
   },
   {
@@ -268,9 +290,11 @@
     "index = faiss.IndexIVFPQ(faiss.IndexFlatL2(d), d, 256, 8, 8)\n",
     "symbol_mapping = {}\n",
     "\n",
+    "\n",
     "def fetch_stock_symbols():\n",
-    "    #TODO: Fetch stock symbols from API\n",
+    "    # TODO: Fetch stock symbols from API\n",
     "    return [\"AAPL\", \"MSFT\", \"AMZN\", \"GOOGL\", \"FB\", \"JPM\", \"JNJ\", \"NVDA\", \"PG\", \"DIS\"]\n",
+    "\n",
     "\n",
     "def fetch_stock_data(symbol):\n",
     "    # Example function to fetch stock data\n",
@@ -279,44 +303,51 @@
     "    data = response.json()\n",
     "    return data\n",
     "\n",
+    "\n",
     "def preprocess_data(data):\n",
     "    # Convert your data to a vector\n",
     "    # Ensure the order of features matches the dimensionality 'd'\n",
-    "    features = ['open', 'high', 'low', 'close', 'volume']\n",
-    "    vector = np.array([data[feature] for feature in features]).astype('float32')\n",
+    "    features = [\"open\", \"high\", \"low\", \"close\", \"volume\"]\n",
+    "    vector = np.array([data[feature] for feature in features]).astype(\"float32\")\n",
     "    return vector\n",
+    "\n",
     "\n",
     "def store_data_in_faiss(symbol, data):\n",
     "    vector = preprocess_data(data)\n",
     "    index.add(np.array([vector]))\n",
     "    symbol_mapping[index.ntotal - 1] = symbol\n",
     "\n",
+    "\n",
     "def fetch_latest_data_from_faiss():\n",
     "    # Example function to fetch latest data from FAISS\n",
     "    k = 1  # Number of nearest neighbors\n",
-    "    query_vector = np.random.random(d).astype('float32')  # Example query vector\n",
+    "    query_vector = np.random.random(d).astype(\"float32\")  # Example query vector\n",
     "    D, I = index.search(np.array([query_vector]), k)\n",
     "    symbols = [symbol_mapping[i] for i in I[0]]\n",
     "    return symbols\n",
     "\n",
+    "\n",
     "def create_debate_prompt(stock_data):\n",
     "    prompt = [\n",
     "        {\"role\": \"system\", \"content\": \"You are a financial expert.\"},\n",
-    "        {\"role\": \"user\", \"content\": f\"Analyze the following stock data and debate: {stock_data}\"}\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": f\"Analyze the following stock data and debate: {stock_data}\",\n",
+    "        },\n",
     "    ]\n",
     "    return prompt\n",
+    "\n",
     "\n",
     "def debate_agents(stock_data):\n",
     "    prompt = create_debate_prompt(stock_data)\n",
     "    response = openai.ChatCompletion.create(\n",
-    "        model=\"gpt-4\",\n",
-    "        messages=prompt,\n",
-    "        temperature=0.7\n",
+    "        model=\"gpt-4\", messages=prompt, temperature=0.7\n",
     "    )\n",
     "    return parse_debate_response(response)\n",
     "\n",
+    "\n",
     "def parse_debate_response(response):\n",
-    "    decisions = [message['content'] for message in response['choices']]\n",
+    "    decisions = [message[\"content\"] for message in response[\"choices\"]]\n",
     "    decision_counts = {\"buy\": 0, \"sell\": 0, \"hold\": 0}\n",
     "    for decision in decisions:\n",
     "        if \"buy\" in decision:\n",
@@ -327,22 +358,17 @@
     "            decision_counts[\"hold\"] += 1\n",
     "    return max(decision_counts, key=decision_counts.get)\n",
     "\n",
+    "\n",
     "def execute_trade(decision, symbol):\n",
-    "    if decision == 'buy':\n",
+    "    if decision == \"buy\":\n",
     "        order = MarketOrderRequest(\n",
-    "            symbol=symbol,\n",
-    "            qty=1,\n",
-    "            side=OrderSide.BUY,\n",
-    "            time_in_force=TimeInForce.GTC\n",
+    "            symbol=symbol, qty=1, side=OrderSide.BUY, time_in_force=TimeInForce.GTC\n",
     "        )\n",
-    "    elif decision == 'sell':\n",
+    "    elif decision == \"sell\":\n",
     "        order = MarketOrderRequest(\n",
-    "            symbol=symbol,\n",
-    "            qty=1,\n",
-    "            side=OrderSide.SELL,\n",
-    "            time_in_force=TimeInForce.GTC\n",
+    "            symbol=symbol, qty=1, side=OrderSide.SELL, time_in_force=TimeInForce.GTC\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    trading_client.submit_order(order)"
    ]
   },
@@ -353,30 +379,32 @@
    "outputs": [],
    "source": [
     "# List of stock symbols to evaluate\n",
-    "stocks = ['AAPL', 'MSFT', 'GOOGL']\n",
+    "stocks = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
+    "\n",
     "\n",
     "def get_stock_fundamentals(stock_symbol):\n",
     "    \"\"\"Fetches basic fundamental data for a given stock symbol using Finnhub API.\"\"\"\n",
     "    try:\n",
     "        # Get basic financials\n",
-    "        financials = finnhub_client.company_basic_financials(stock_symbol, 'all')\n",
+    "        financials = finnhub_client.company_basic_financials(stock_symbol, \"all\")\n",
     "\n",
     "        # Extract relevant data\n",
-    "        metric = financials['metric']\n",
+    "        metric = financials[\"metric\"]\n",
     "        fundamentals = {\n",
-    "            'symbol': stock_symbol,\n",
-    "            'peRatioTTM': metric.get('peNormalizedAnnual', 'N/A'),\n",
-    "            'pbRatio': metric.get('pbAnnual', 'N/A'),\n",
-    "            'dividendYieldTTM': metric.get('currentDividendYieldTTM', 'N/A'),\n",
-    "            'epsTTM': metric.get('epsTTM', 'N/A'),\n",
-    "            'marketCapitalization': metric.get('marketCapitalization', 'N/A'),\n",
-    "            '52WeekHigh': metric.get('52WeekHigh', 'N/A'),\n",
-    "            '52WeekLow': metric.get('52WeekLow', 'N/A'),\n",
+    "            \"symbol\": stock_symbol,\n",
+    "            \"peRatioTTM\": metric.get(\"peNormalizedAnnual\", \"N/A\"),\n",
+    "            \"pbRatio\": metric.get(\"pbAnnual\", \"N/A\"),\n",
+    "            \"dividendYieldTTM\": metric.get(\"currentDividendYieldTTM\", \"N/A\"),\n",
+    "            \"epsTTM\": metric.get(\"epsTTM\", \"N/A\"),\n",
+    "            \"marketCapitalization\": metric.get(\"marketCapitalization\", \"N/A\"),\n",
+    "            \"52WeekHigh\": metric.get(\"52WeekHigh\", \"N/A\"),\n",
+    "            \"52WeekLow\": metric.get(\"52WeekLow\", \"N/A\"),\n",
     "        }\n",
     "        return fundamentals\n",
     "    except Exception as e:\n",
     "        print(f\"Error fetching data for {stock_symbol}: {e}\")\n",
     "        return None\n",
+    "\n",
     "\n",
     "def evaluate_stocks(stock_list):\n",
     "    \"\"\"Evaluates a list of stocks and prints their fundamental data.\"\"\"\n",
@@ -385,61 +413,64 @@
     "        fundamentals = get_stock_fundamentals(stock)\n",
     "        if fundamentals:\n",
     "            results.append(fundamentals)\n",
-    "    \n",
+    "\n",
     "    return results\n",
+    "\n",
     "\n",
     "import finnhub\n",
     "import os\n",
     "\n",
     "# List of stock symbols to evaluate\n",
-    "stocks = ['AAPL', 'MSFT', 'GOOGL']\n",
+    "stocks = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
+    "\n",
     "\n",
     "def get_stock_fundamentals(stock_symbol):\n",
     "    \"\"\"Fetches basic fundamental data for a given stock symbol using Finnhub API.\"\"\"\n",
     "    try:\n",
     "        # Get basic financials\n",
-    "        financials = finnhub_client.company_basic_financials(stock_symbol, 'all')\n",
+    "        financials = finnhub_client.company_basic_financials(stock_symbol, \"all\")\n",
     "\n",
     "        # Get current price\n",
     "        quote = finnhub_client.quote(stock_symbol)\n",
-    "        current_price = quote['c']\n",
+    "        current_price = quote[\"c\"]\n",
     "\n",
     "        # Extract relevant data\n",
-    "        metric = financials['metric']\n",
+    "        metric = financials[\"metric\"]\n",
     "        fundamentals = {\n",
-    "            'symbol': stock_symbol,\n",
-    "            'current_price': current_price,\n",
-    "            '10DayAverageTradingVolume': metric.get('10DayAverageTradingVolume', 'N/A'),\n",
-    "            '13WeekPriceReturnDaily': metric.get('13WeekPriceReturnDaily', 'N/A'),\n",
-    "            '26WeekPriceReturnDaily': metric.get('26WeekPriceReturnDaily', 'N/A'),\n",
-    "            '52WeekHigh': metric.get('52WeekHigh', 'N/A'),\n",
-    "            '52WeekLow': metric.get('52WeekLow', 'N/A'),\n",
-    "            '52WeekPriceReturnDaily': metric.get('52WeekPriceReturnDaily', 'N/A'),\n",
-    "            '5DayPriceReturnDaily': metric.get('5DayPriceReturnDaily', 'N/A'),\n",
-    "            'peRatioTTM': metric.get('peNormalizedAnnual', 'N/A'),\n",
-    "            'pbRatio': metric.get('pbAnnual', 'N/A'),\n",
-    "            'dividendYieldTTM': metric.get('currentDividendYieldTTM', 'N/A'),\n",
-    "            'epsTTM': metric.get('epsTTM', 'N/A'),\n",
-    "            'marketCapitalization': metric.get('marketCapitalization', 'N/A'),\n",
-    "            'currentRatioAnnual': metric.get('currentRatioAnnual', 'N/A'),\n",
-    "            'quickRatioAnnual': metric.get('quickRatioAnnual', 'N/A'),\n",
-    "            'debt/equityAnnual': metric.get('totalDebt/totalEquityAnnual', 'N/A'),\n",
-    "            'grossMarginAnnual': metric.get('grossMarginAnnual', 'N/A'),\n",
-    "            'netProfitMarginAnnual': metric.get('netProfitMarginAnnual', 'N/A'),\n",
-    "            'operatingMarginAnnual': metric.get('operatingMarginAnnual', 'N/A'),\n",
-    "            'revenueGrowth3Y': metric.get('revenueGrowth3Y', 'N/A'),\n",
-    "            'revenueGrowth5Y': metric.get('revenueGrowth5Y', 'N/A'),\n",
-    "            'revenueGrowthQuarterlyYoy': metric.get('revenueGrowthQuarterlyYoy', 'N/A'),\n",
-    "            'epsGrowth3Y': metric.get('epsGrowth3Y', 'N/A'),\n",
-    "            'epsGrowth5Y': metric.get('epsGrowth5Y', 'N/A'),\n",
-    "            'bookValuePerShareAnnual': metric.get('bookValuePerShareAnnual', 'N/A'),\n",
-    "            'cashFlowPerShareTTM': metric.get('cashFlowPerShareTTM', 'N/A'),\n",
-    "            'enterpriseValue': metric.get('enterpriseValue', 'N/A'),\n",
+    "            \"symbol\": stock_symbol,\n",
+    "            \"current_price\": current_price,\n",
+    "            \"10DayAverageTradingVolume\": metric.get(\"10DayAverageTradingVolume\", \"N/A\"),\n",
+    "            \"13WeekPriceReturnDaily\": metric.get(\"13WeekPriceReturnDaily\", \"N/A\"),\n",
+    "            \"26WeekPriceReturnDaily\": metric.get(\"26WeekPriceReturnDaily\", \"N/A\"),\n",
+    "            \"52WeekHigh\": metric.get(\"52WeekHigh\", \"N/A\"),\n",
+    "            \"52WeekLow\": metric.get(\"52WeekLow\", \"N/A\"),\n",
+    "            \"52WeekPriceReturnDaily\": metric.get(\"52WeekPriceReturnDaily\", \"N/A\"),\n",
+    "            \"5DayPriceReturnDaily\": metric.get(\"5DayPriceReturnDaily\", \"N/A\"),\n",
+    "            \"peRatioTTM\": metric.get(\"peNormalizedAnnual\", \"N/A\"),\n",
+    "            \"pbRatio\": metric.get(\"pbAnnual\", \"N/A\"),\n",
+    "            \"dividendYieldTTM\": metric.get(\"currentDividendYieldTTM\", \"N/A\"),\n",
+    "            \"epsTTM\": metric.get(\"epsTTM\", \"N/A\"),\n",
+    "            \"marketCapitalization\": metric.get(\"marketCapitalization\", \"N/A\"),\n",
+    "            \"currentRatioAnnual\": metric.get(\"currentRatioAnnual\", \"N/A\"),\n",
+    "            \"quickRatioAnnual\": metric.get(\"quickRatioAnnual\", \"N/A\"),\n",
+    "            \"debt/equityAnnual\": metric.get(\"totalDebt/totalEquityAnnual\", \"N/A\"),\n",
+    "            \"grossMarginAnnual\": metric.get(\"grossMarginAnnual\", \"N/A\"),\n",
+    "            \"netProfitMarginAnnual\": metric.get(\"netProfitMarginAnnual\", \"N/A\"),\n",
+    "            \"operatingMarginAnnual\": metric.get(\"operatingMarginAnnual\", \"N/A\"),\n",
+    "            \"revenueGrowth3Y\": metric.get(\"revenueGrowth3Y\", \"N/A\"),\n",
+    "            \"revenueGrowth5Y\": metric.get(\"revenueGrowth5Y\", \"N/A\"),\n",
+    "            \"revenueGrowthQuarterlyYoy\": metric.get(\"revenueGrowthQuarterlyYoy\", \"N/A\"),\n",
+    "            \"epsGrowth3Y\": metric.get(\"epsGrowth3Y\", \"N/A\"),\n",
+    "            \"epsGrowth5Y\": metric.get(\"epsGrowth5Y\", \"N/A\"),\n",
+    "            \"bookValuePerShareAnnual\": metric.get(\"bookValuePerShareAnnual\", \"N/A\"),\n",
+    "            \"cashFlowPerShareTTM\": metric.get(\"cashFlowPerShareTTM\", \"N/A\"),\n",
+    "            \"enterpriseValue\": metric.get(\"enterpriseValue\", \"N/A\"),\n",
     "        }\n",
     "        return fundamentals\n",
     "    except Exception as e:\n",
     "        print(f\"Error fetching data for {stock_symbol}: {e}\")\n",
     "        return None\n",
+    "\n",
     "\n",
     "def evaluate_stocks(stock_list):\n",
     "    \"\"\"Evaluates a list of stocks and prints their fundamental data.\"\"\"\n",
@@ -448,8 +479,9 @@
     "        fundamentals = get_stock_fundamentals(stock)\n",
     "        if fundamentals:\n",
     "            results.append(fundamentals)\n",
-    "    \n",
+    "\n",
     "    return results\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    stock_fundamentals = evaluate_stocks(stocks)\n",
@@ -466,7 +498,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(finnhub_client.company_basic_financials('MSFT', 'All')).T.to_json()"
+    "\n",
+    "pd.DataFrame(finnhub_client.company_basic_financials(\"MSFT\", \"All\")).T.to_json()"
    ]
   },
   {
@@ -485,10 +518,10 @@
     "\n",
     "# Check if our account is restricted from trading.\n",
     "if account.trading_blocked:\n",
-    "    print('Account is currently restricted from trading.')\n",
+    "    print(\"Account is currently restricted from trading.\")\n",
     "\n",
     "# Check how much money we can use to open new positions.\n",
-    "print('${} is available as buying power.'.format(account.buying_power))"
+    "print(\"${} is available as buying power.\".format(account.buying_power))"
    ]
   },
   {
@@ -510,9 +543,9 @@
     "url = f\"https://data.alpaca.markets/v2/stocks/{symbol}/quotes/latest\"\n",
     "\n",
     "headers = {\n",
-    "    'accept': 'application/json',\n",
-    "    'APCA-API-KEY-ID': ALPACA_API_KEY,\n",
-    "    'APCA-API-SECRET-KEY': ALPACA_SECRET_KEY\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"APCA-API-KEY-ID\": ALPACA_API_KEY,\n",
+    "    \"APCA-API-SECRET-KEY\": ALPACA_SECRET_KEY,\n",
     "}\n",
     "\n",
     "response = requests.get(url, headers=headers)\n",
@@ -528,9 +561,9 @@
    "source": [
     "url = \"https://data.alpaca.markets/v2/positions\"\n",
     "headers = {\n",
-    "    'accept': 'application/json',\n",
-    "    'APCA-API-KEY-ID': ALPACA_API_KEY,\n",
-    "    'APCA-API-SECRET-KEY': ALPACA_SECRET_KEY\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"APCA-API-KEY-ID\": ALPACA_API_KEY,\n",
+    "    \"APCA-API-SECRET-KEY\": ALPACA_SECRET_KEY,\n",
     "}\n",
     "\n",
     "response = requests.get(url, headers=headers)\n",
